# BETO_Legal_Mexico1

./: .gitignore  .gitmodules  README.md  hugo.toml  hugo_1.toml  pyproject.toml  requirements.txt
.github/workflows/: hugo.yml  tree.yml
content/docs/: _index.md  uml.md
data/bronze/scjn/: datos_limpios.json  scjn_api.xlsx
data/bronze/scjn/sentencias/: scjn_sentencias.csv  scjn_sentencias.json
data/scripts_procesamiento/diccionarios/: procesar_scjn.py  procesar_scjn_boletin.py
data/scripts_procesamiento/repositorio_scjn/: ocr_procesamiento_pdf_diccionario-github.py  ocr_procesamiento_pdf_diccionario.py  procesar_diccionario_juridico_unam-github.py  procesar_diccionario_juridico_unam.py
data/sin_procesar/scjn/: datos_limpios.json  scjn_api.xlsx
docs/architecture/diagrams/puml/: data_pipeline.puml  features.puml  mlops.puml  serving.puml  training.puml
src/Beto/pipeline/01_ingestion/scrapers/diccionarios/: scrapper_diccionario_juridico.py
src/Beto/pipeline/01_ingestion/scrapers/repositorio_scjn/: scrapper_scjn.py  scrapper_scjn_boletin.py
src/Beto/pipeline/03_processing/: ocr_extraction.py
src/Beto/templates/latex/: plantilla_iph.tex
src/Beto/utils/: client.py  config.py
